--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -3,11 +3,9 @@
 // --------------------------------------------------
 //## Compiles to app.css.
 
-
-
 @import "variables";
 @import "general";
-@import "inicio";
+@import "cadastro";
 @import "agente";
 @import "termos";
-@import "cadastro";
+@import "edit";
