--- a/assets-src/sass/_cadastro.scss
+++ b/assets-src/sass/_cadastro.scss
@@ -1,154 +1,267 @@
-.lab-form-tab {
-  text-align: center;
-  cursor: pointer;
-  &:before {
-      @extend %tick-icon;
-      display: block;
-  }
-  &:hover{
-      &:before {
-          background-color: $brand-primary;
-      }
-  }
-}
-.lab-form-tab-active {
-  &:before {
-      background-color: $brand-primary;
-  }
-}
-.lab-form-tab-complete {
-  &:before {
-      background-color: $brand-success;
-  }
-  &:hover:before {
-      background-color: $brand-success;
-  }
-}
-.lab-form-tab-error {
-  &:before {
-      background-color: $brand-danger;
-  }
-  &:hover:before {
-      background-color: $brand-danger;
-  }
-}
-.lab-form-step-count {
-  color: $brand-primary;
-  font-size: .875rem;
-  font-weight: bold;
-}
-.lab-form-nav {
-  text-align: center;
+//
+// Cadastro (Tela de entrada)
+// --------------------------------------------------
+
+
+.lab-form-answer {
+    position: relative;
+    background: #f8f8f8;
+    padding: 0.75rem 0.75rem 2.5rem;
+    border-radius: 2px;
+    @media screen and (min-width: 768px) {
+        padding: 1.5rem;
+    }
 }
 
-.lab-application-number {
-  text-align: center;
-  background-color: $gray-light;
-  color: $brand-primary;
-  font-weight: bold;
-  border-radius: 2px;
-  float: left;
-  margin: 1.5rem auto;
-  padding: $padding-base;
-  &:after{
-      content: '.';
-      display: block;
-      height: 0;
-      clear: both;
-      visibility: hidden;
-  }
+.lab-back {
+    position: absolute;
+    left: 0.75rem;
+    bottom: 0.75rem;
+    @media screen and (min-width: 768px) {
+        left: 1.5rem;
+        bottom: 1.5rem;
+    }
 }
 
-#editable-entity {
-  display: none;
+.lab-form-filter {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-around;
+    }
 }
 
-.questions{
-
-  h1, h2, h3, h4, h5{
-    font-family: "Open Sans", Helvetica, Arial, sans-serif !important;
-  }
-
-  .questions-tab h4{
-    font-size: 1.8rem;
-    border-bottom: 2px solid #f8f8f8;
-    margin-bottom: 10px;
-    margin-top: 2rem;
-    line-height: 2rem;
-  }
-
-  .questions-tab-summary{
-    margin: 10px;
-    font-size: 1rem;
-  }
-
-  .options-questions{
+.lab-option {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    label{
-      width: 300px;
-      padding: 0.75rem;
-      background-color: #f8f8f8;
-      border-radius: 2px;
-      transition: all 0.3s;
-      color: #3a72bc;
-      font-weight: normal;
-      font-size: 0.85rem;
-      margin: 1rem;
-      &:before {
+    padding: 0.75rem;
+    margin: 0 0 2px;
+    background-color: #f8f8f8;
+    border-radius: 2px;
+    transition: all 0.3s;
+    color: $brand-primary;
+    font-weight: normal;
+    @media screen and (min-width: 768px) {
+        flex-flow: column nowrap;
+        justify-content: space-between;
+        flex: 1 1 0;
+        margin: 0 2px;
+        padding: 1.5rem;
+    }
+    a {
+        color: $brand-primary;
+        font-weight: normal;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+    &:before {
         display: block;
         content: "N";
         width: 36px;
         height: 36px;
         flex: 36px 0 0;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 10px;
+        margin: 0 10px 0 0;
         font-family: "ElegantIcons";
         line-height: 36px;
         text-align: center;
         border-radius: 18px;
         color: #fff;
-        background-color: #e2e2e2;
-      }
-      &:hover {
+        background-color: $gray-light;
+        @media screen and (min-width: 768px) {
+            order: 3;
+            margin: 0 auto;
+        }
+    }
+    &:hover {
         background-color: #fff;
         cursor: pointer;
-      }
-      &:hover:before, &:active:before {
-        color: #fff;
-        background-color: #3a72bc;
-      }
     }
-  }
-
-  input[type=radio]{
-    visibility: hidden;
-  }
+    &:hover:before,
+    &:active:before {
+        color: #fff;
+        background-color: $brand-primary;
+    }
+    h2 {
+        font-size: 1.2rem;
+    }
+    h3 {
+        font-size: 1rem;
+    }
+    h2,
+    h3 {
+        font-family: "Open Sans", Helvetica, Arial, sans-serif;
+        line-height: 1.5;
+        text-align: left;
+        max-width: calc(100% - 46px);
+        @media screen and (min-width: 768px) {
+            text-align: center;
+            max-width: unset;
+        }
+    }
+}
+.lab-status {
+    color: inherit;
+    &:before {
+        color: #fff;
+    }
+    h2 {
+        color: #fff;
+        padding: 6px;
+        border-radius: 2px;
+    }
+}
+.lab-status-approved {
+    @extend .lab-status;
+    &:hover {
+        background-color: $brand-success-light;
+    }
+    &:before,
+    &:hover:before {
+        content: $unicode-approved;
+        background-color: $brand-success;
+    }
+    h2 {
+        background-color: $brand-success;
+    }
+}
+.lab-status-denied {
+    @extend .lab-status;
+    &:hover {
+        background-color: $brand-danger-light;
+    }
+    &:before,
+    &:hover:before {
+        content: $unicode-disapproved;
+        background-color: $brand-danger;
+    }
+    h2 {
+        background-color: $brand-danger;
+    }
+}
+.lab-status-waiting {
+    @extend .lab-status;
+    &:hover {
+        background-color: $brand-warning-light;
+    }
+    &:before,
+    &:hover:before {
+        content: $unicode-waiting;
+        background-color: $brand-warning;
+    }
+    h2 {
+        background-color: $brand-warning;
+    }
 }
 
-.inactive{
-  display: none;
-}
-.selected{
-  background-color: #fff !important;
-  &:before, &:before {
-    color: #fff !important;
-    background-color: #3a72bc !important;
-  }
+.lab-option-detail {
+    display: none;
+    font-size: $font-size-small;
+    text-align: left;
+    padding-left: 46px;
+    @media screen and (min-width: 768px) {
+        display: block;
+        text-align: center;
+        padding-left: 0;
+    }
+    .label {
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-size: 0.7rem;
+    }
 }
 
-.select2-container{
-  max-width: 90%;
-  width: 50% !important;
-  @media screen and (max-width: 768px) {
-    width: 80% !important;
-  }
+.questions {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        font-family: "Open Sans", Helvetica, Arial, sans-serif !important;
+    }
+
+    .questions-tab h4 {
+        font-size: 1.8rem;
+        border-bottom: 2px solid #f8f8f8;
+        margin-bottom: 10px;
+        margin-top: 2rem;
+        line-height: 2rem;
+    }
+
+    .questions-tab-summary {
+        margin: 10px;
+        font-size: 1rem;
+    }
+
+    .options-questions {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        label {
+            width: 300px;
+            padding: 0.75rem;
+            background-color: #f8f8f8;
+            border-radius: 2px;
+            transition: all 0.3s;
+            color: #3a72bc;
+            font-weight: normal;
+            font-size: 0.85rem;
+            margin: 1rem;
+            &:before {
+                display: block;
+                content: "N";
+                width: 36px;
+                height: 36px;
+                flex: 36px 0 0;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 10px;
+                font-family: "ElegantIcons";
+                line-height: 36px;
+                text-align: center;
+                border-radius: 18px;
+                color: #fff;
+                background-color: #e2e2e2;
+            }
+            &:hover {
+                background-color: #fff;
+                cursor: pointer;
+            }
+            &:hover:before,
+            &:active:before {
+                color: #fff;
+                background-color: #3a72bc;
+            }
+        }
+    }
+
+    input[type="radio"] {
+        visibility: hidden;
+    }
+}
+
+.inactive {
+    display: none;
+}
+.selected {
+    background-color: #fff !important;
+    &:before,
+    &:before {
+        color: #fff !important;
+        background-color: #3a72bc !important;
+    }
+}
+
+.select2-container {
+    max-width: 90%;
+    width: 50% !important;
+    @media screen and (max-width: 768px) {
+        width: 80% !important;
+    }
 }
 
 @media screen and (max-width: 982px) {
-  .lab-main-content{
-    display:block !important;
-  }
+    .lab-main-content {
+        display: block !important;
+    }
 }
