--- a/assets-src/sass/2-atoms/_a-mixins.scss
+++ b/assets-src/sass/2-atoms/_a-mixins.scss
@@ -173,3 +173,21 @@ $base-size: 16;
 @function size($target, $context: $base-size) {
     @return ($target / $context) * 1rem;
 }
+
+@mixin border-radius($radius) {
+    border-radius: $radius;
+    -webkit-border-radius: $radius;
+    -moz-border-radius: $radius;
+}
+
+@mixin box-shadow($left, $top, $radius, $color) {
+    box-shadow: $left $top $radius $color;
+    -webkit-box-shadow: $left $top $radius $color;
+    -moz-box-shadow: $left $top $radius $color;
+}
+
+@mixin transition($property, $duration, $easing: linear) {
+    transition: $property $duration $easing;
+    -webkit-transition: $property $duration $easing;
+    -moz-transition: $property $duration $easing;
+}
