Add schema to example block

--- a/assets-src/sass/4-components/_c-example-block.scss
+++ b/assets-src/sass/4-components/_c-example-block.scss
@@ -1,3 +1,8 @@
+// Component schema (HTML schema for block usage)
+// <element class=""> 
+//      <element class="">  </element>
+// </element>
+
 // Always limit the styles to the block itself
 .example-block {
     
