--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -19,6 +19,7 @@
 /* ----- 4: COMPONENTS ------- */
 @import '4-components/c-example-block';
 @import '4-components/c-card';
+@import '4-components/c-informative-box';
 
 
 
