--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -20,6 +20,7 @@
 @import '4-components/c-example-block';
 @import '4-components/c-card';
 @import '4-components/c-informative-box';
+@import '4-components/c-modal';
 
 
 
