--- a/assets-src/sass/4-components/_c-card.scss
+++ b/assets-src/sass/4-components/_c-card.scss
@@ -14,7 +14,7 @@ $card-box-shadow: $default-box-shadow;
     &--title {
         color: #111111;
         font-family: $f_title;
-        font-size: 1rem;
+        font-size: $font-size-base;
         font-weight: bold;
         letter-spacing: 0;
         line-height: 1.375rem;
