--- a/assets-src/sass/1-settings/_s-variables.scss
+++ b/assets-src/sass/1-settings/_s-variables.scss
@@ -9,15 +9,20 @@ $dir_assets : '/assets/';
 // include sass color module
 @use 'sass:color';
 
-$gray-darker: #333 !default;
+$light: #fff !default;
+
+$gray-darker: #333  !default;
 $gray-dark: #666 !default;
 $gray: #ccc !default;
 $gray-light: #e2e2e2 !default;
 $gray-lighter: #eee !default;
 
 $brand-primary: #3a72bc !default;
-$brand-primary-light: color.scale($brand-primary, $lightness: 80%) !default;
+$brand-primary-light: color.scale($brand-primary, $lightness: 20%) !default;
 $brand-accent: #000000 !default;
+
+$brand-secondary: #666666 !default;
+$brand-secondary-light: color.scale($brand-secondary, $lightness: 20%) !default;
 
 $brand-event: #b3b921 !default;
 $brand-agent: #1dabc6 !default;
