Adiciona componente botao no app.scss

--- a/assets-src/sass/app.scss
+++ b/assets-src/sass/app.scss
@@ -18,6 +18,7 @@
 
 /* ----- 4: COMPONENTS ------- */
 @import '4-components/c-example-block';
+@import '4-components/c-button';
 @import '4-components/c-card';
 @import '4-components/c-informative-box';
 @import '4-components/c-modal';
