--- a/assets-src/sass/4-components/_c-informative-box.scss
+++ b/assets-src/sass/4-components/_c-informative-box.scss
@@ -6,10 +6,13 @@
 //         <h2> Title here </h2>
 //         <i class="status-icon"></i>
 //     </element>
-  
 //     <element class="informative-box--content">
 //          <span class="more"> </span>
-//          <span class="content"></span>
+//          <span class="content">
+//              <div class="item">
+//                  <span class="label"></span>
+//              </div>
+//          </span>
 //     </element>
 // </button>
 
