--- a/assets-src/sass/1-settings/_s-variables.scss
+++ b/assets-src/sass/1-settings/_s-variables.scss
@@ -27,6 +27,11 @@ $brand-secondary-light: color.scale($brand-secondary, $lightness: 20%) !default;
 $brand-tertiary: #cc0033 !default;
 $brand-tertiary-light: color.scale($brand-tertiary, $lightness: 20%) !default;
 
+$theme-color-primary: #9565D2 !default;
+$theme-color-secondary: #B4BA00 !default;
+$theme-color-tertiary: #C60931 !default;
+$theme-color-quaternary: #666666 !default;
+
 $brand-event: #b3b921 !default;
 $brand-agent: #1dabc6 !default;
 $brand-space: #e83f96 !default;
