--- a/assets-src/sass/3-layout/_l-termos.scss
+++ b/assets-src/sass/3-layout/_l-termos.scss
@@ -1,32 +1,40 @@
-#termos{
-
-  padding-top: 20px;
-
-  &--header{
-    display: flex;
-    justify-content: center;
-    @include desktop {
-      width: 50%;
-    }
-  }
+.termos{
+  padding-top: 10px;
 
   h2{
     font-family: $headings-font-family;
     text-align: center;
     font-weight: bold;
-  }
-
-  p{
-    text-align: center;
-  }
-
-  .list{
-    margin:auto;
+    padding-top: 20px;
+    margin: auto;
     @include desktop {
-     width: 50%;
+      width: 50%;
     }
   }
-  .nav-terms{
+
+  &--summay{
+    font-family: $headings-font-family;
+    text-align: center;
+    margin: auto;
+    padding-left: 8%;
+    padding-right: 8%;
+    @include desktop {
+      width: 50%;
+    }
+  }
+
+  &--list{
+    margin:auto;
+    @include desktop {
+     width: 40%;
+    }
+  }
+
+  &--text{
+    line-height: 17px;
+  }
+
+  &--nav-terms{
     display: flex;
     justify-content: center;
   }
