--- a/assets/aldirblanc/app.css
+++ b/assets/aldirblanc/app.css
@@ -840,6 +840,57 @@ i {
 
 /* ----- 3: LAYOUT ------- */
 
+.termos {
+  padding-top: 10px;
+}
+
+.termos h2 {
+  font-family: "aleo";
+  text-align: center;
+  font-weight: bold;
+  padding-top: 20px;
+  margin: auto;
+}
+
+@media (min-width: 1025px) {
+  .termos h2 {
+    width: 50%;
+  }
+}
+
+.termos--summay {
+  font-family: "aleo";
+  text-align: center;
+  margin: auto;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+
+@media (min-width: 1025px) {
+  .termos--summay {
+    width: 50%;
+  }
+}
+
+.termos--list {
+  margin: auto;
+}
+
+@media (min-width: 1025px) {
+  .termos--list {
+    width: 40%;
+  }
+}
+
+.termos--text {
+  line-height: 17px;
+}
+
+.termos--nav-terms {
+  display: flex;
+  justify-content: center;
+}
+
 /* ----- 4: COMPONENTS ------- */
 
 .btn {
@@ -883,6 +934,7 @@ i {
 }
 
 .card,
+.term,
 .modal .modal-content,
 .status-card,
 .status-card--quaternary,
@@ -1121,6 +1173,7 @@ i {
   border: none !important;
   box-shadow: none !important;
   height: 100%;
+  left: 0;
   margin: 0;
   padding: 0;
   top: 0;
@@ -1133,7 +1186,13 @@ i {
   margin: 30% auto 0;
   position: relative;
   text-align: center;
-  width: calc(100% - 30px);
+  width: 60%;
+}
+
+@media (max-width: 829px) {
+  .modal .modal-content {
+    width: calc(100% - 30px);
+  }
 }
 
 .modal .modal-content--title {
@@ -1169,6 +1228,50 @@ i {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.term {
+  font-family: "aleo";
+  display: flex;
+  margin: 15px;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  padding-left: 44px;
+  cursor: pointer;
+}
+
+.term--box {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  height: 100%;
+  left: -1px;
+  width: 40px;
+  background-color: #31AAC9;
+}
+
+.term--input {
+  position: absolute;
+  left: 10px;
+  min-width: 18px;
+  min-height: 18px;
+}
+
+.term--input:checked + span {
+  font-weight: 400;
+  color: #31AAC9;
+}
+
+.term--label {
+  display: flex;
+  align-items: center;
+  background: white;
+  cursor: pointer;
+}
+
+.term--label:active {
+  color: #31AAC9;
 }
 
 /* ----- 5: PAGES ------- */
